crates/alder-parse/src/expression/snapshots/alder_parse__expression__postfix__tests__index_simple.snap
---
source: crates/alder-parse/src/expression/postfix.rs
description: "xs[0]"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 6,
        },
    },
    value: Index {
        target: Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 1,
                },
                end: Position {
                    line: 1,
                    column: 3,
                },
            },
            value: Var(
                "xs",
            ),
        },
        index: Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 4,
                },
                end: Position {
                    line: 1,
                    column: 5,
                },
            },
            value: Number(
                NumberLit {
                    value: 0.0,
                    text: "0",
                },
            ),
        },
    },
}
