crates/alder-parse/src/expression/snapshots/alder_parse__expression__postfix__tests__macro_call_nested_parens.snap
---
source: crates/alder-parse/src/expression/postfix.rs
description: f!((a)(b))
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 11,
        },
    },
    value: MacroCall {
        name: Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 1,
                },
                end: Position {
                    line: 1,
                    column: 2,
                },
            },
            value: "f",
        },
        tokens: Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 4,
                },
                end: Position {
                    line: 1,
                    column: 10,
                },
            },
            value: "(a)(b)",
        },
    },
}
