crates/alder-parse/src/expression/snapshots/alder_parse__expression__postfix__tests__tagged_template_adjacent.snap
---
source: crates/alder-parse/src/expression/postfix.rs
description: "sql`select ${x}`"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 17,
        },
    },
    value: TaggedTemplate {
        tag: Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 1,
                },
                end: Position {
                    line: 1,
                    column: 4,
                },
            },
            value: Var(
                "sql",
            ),
        },
        parts: [
            Text(
                "select ",
            ),
            Expr(
                Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 14,
                        },
                        end: Position {
                            line: 1,
                            column: 15,
                        },
                    },
                    value: Var(
                        "x",
                    ),
                },
            ),
        ],
    },
}
