crates/alder-parse/src/expression/snapshots/alder_parse__expression__postfix__tests__try_simple.snap
---
source: crates/alder-parse/src/expression/postfix.rs
description: x?
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 3,
        },
    },
    value: Try(
        Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 1,
                },
                end: Position {
                    line: 1,
                    column: 2,
                },
            },
            value: Var(
                "x",
            ),
        },
    ),
}
