crates/alder-parse/src/expression/snapshots/alder_parse__expression__postfix__tests__tuple_index.snap
---
source: crates/alder-parse/src/expression/postfix.rs
description: t.0
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 4,
        },
    },
    value: TupleAccess {
        tuple: Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 1,
                },
                end: Position {
                    line: 1,
                    column: 2,
                },
            },
            value: Var(
                "t",
            ),
        },
        index: Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 3,
                },
                end: Position {
                    line: 1,
                    column: 4,
                },
            },
            value: 0,
        },
    },
}
